#ConnectForm添加按键使能关闭后，不可重复点击的处理；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -1,7 +1,7 @@
 ##注意，不要改动"[SkinSet]”的位置，如果放在第一行,设置将不会生效
 [Show]
 multiRun=false
-newMainForm=false
+newMainForm=true
 useSkin=false
 testButton=false
 hardwareUpdateButton=true
