++++添加调光调试数据兼容模式 ++++新增参数配置器重构版，旧版暂时保留

--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -94,6 +94,7 @@
       <DependentUpon>SpecialForm.cs</DependentUpon>
     </Compile>
     <Compile Include="utils\communication\BaseFunctionalModule.cs" />
+    <Compile Include="utils\communication\Communitor.cs" />
     <Compile Include="utils\communication\CSJNetCommunitor.cs" />
     <Compile Include="utils\communication\FunctionModule.cs" />
     <Compile Include="utils\communication\HCXNetCommunitor.cs" />
