++++解决超过256空间后数据错乱问题 ++++部分修复闪点问题，未完全解决 ++++添加新版ArtNetClient（未测试完成）

--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -194,6 +194,8 @@
     <Compile Include="utils\lbdconfigtor\NetCommunitor.cs" />
     <Compile Include="utils\StringHelper.cs" />
     <Compile Include="utils\XiaosaTest.cs" />
+    <Compile Include="xiaosa\entity\Packet.cs" />
+    <Compile Include="xiaosa\madirx\ArtNetClient.cs" />
     <EmbeddedResource Include="MyForm\MainForm2.resx">
       <DependentUpon>MainForm2.cs</DependentUpon>
     </EmbeddedResource>
