#基本完成几个重要功能的DAO转移；删除旧DAO及相关内容前做个备份

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -168,6 +168,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\OldDAO.cs" />
     <Compile Include="EntityNew\DB_ChannelPK.cs" />
     <Compile Include="EntityNew\DB_NewFineTune.cs" />
     <Compile Include="EntityNew\DB_NewLight.cs" />
