--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -451,6 +451,8 @@
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
     <Compile Include="Utils\Ver2\GlobalBean.cs" />
     <Compile Include="Xiaosa\Entity\CallBackFunction.cs" />
+    <Compile Include="Xiaosa\Entity\RecordBasicFile.cs" />
+    <Compile Include="Xiaosa\Entity\RecordMusicFile.cs" />
     <Compile Include="Xiaosa\Tools\SerialPortDMXPlay.cs" />
     <Content Include="Protocol\SceneList_BAK.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
