--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -431,7 +431,6 @@
     <Compile Include="Tools\CSJ\IMPL\NetworkDeviceInfo.cs" />
     <Compile Include="Tools\CSJ\IMPL\SequencerData.cs" />
     <Compile Include="Tools\PlayTools.cs" />
-    <Compile Include="Tools\XiaosaTest.cs" />
     <Compile Include="Utils\CommandLogUtils.cs" />
     <Compile Include="Utils\LightConfig\LightConfigBean.cs" />
     <Compile Include="Utils\OldFileToNewFileUtils.cs" />
@@ -449,6 +448,7 @@
     <Compile Include="Xiaosa\Entity\CallBackFunction.cs" />
     <Compile Include="Xiaosa\Entity\RecordBasicFile.cs" />
     <Compile Include="Xiaosa\Entity\RecordMusicFile.cs" />
+    <Compile Include="Xiaosa\Tools\CSJProjectBuilder.cs" />
     <Compile Include="Xiaosa\Tools\SerialPortDMXPlay.cs" />
     <EmbeddedResource Include="Entity\DB_Light.hbm.xml">
       <SubType>Designer</SubType>
