--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -391,11 +391,11 @@
     <Compile Include="MyForm\MainFormAst\OpenForm.Designer.cs">
       <DependentUpon>OpenForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\MainFormAst\CallSceneForm.cs">
+    <Compile Include="MyForm\MainFormAst\CopySceneForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\MainFormAst\CallSceneForm.Designer.cs">
-      <DependentUpon>CallSceneForm.cs</DependentUpon>
+    <Compile Include="MyForm\MainFormAst\CopySceneForm.Designer.cs">
+      <DependentUpon>CopySceneForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyForm\GlobalSet\YMSetForm.cs">
       <SubType>Form</SubType>
@@ -565,8 +565,8 @@
     <EmbeddedResource Include="MyForm\MainFormAst\OpenForm.resx">
       <DependentUpon>OpenForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\MainFormAst\CallSceneForm.resx">
-      <DependentUpon>CallSceneForm.cs</DependentUpon>
+    <EmbeddedResource Include="MyForm\MainFormAst\CopySceneForm.resx">
+      <DependentUpon>CopySceneForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\GlobalSet\YMSetForm.resx">
       <DependentUpon>YMSetForm.cs</DependentUpon>
