-暂时撤销更改灯具地址的相关操作； #删除另外的DeleteRedundantData方法，因为只用了一行代码，直接放到调用处；#DeleteRedundateData由BaseDAO移动到ChannelDAO；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -170,7 +170,7 @@
   <ItemGroup>
     <Compile Include="Ast\Enum\EnumOperator.cs" />
     <Compile Include="Ast\Enum\EnumUnifyWhere.cs" />
-    <Compile Include="Ast\LightListOperator.cs" />
+    <Compile Include="Ast\LightsChange.cs" />
     <Compile Include="DAO\OldDAO.cs" />
     <Compile Include="Entity\DB_ChannelPK.cs" />
     <Compile Include="Entity\DB_FineTune.cs" />
