--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -812,12 +812,6 @@
     <None Include="Properties\app.manifest">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Properties\DataSources\DMX512.DB_FineTune.datasource" />
-    <None Include="Properties\DataSources\DMX512.DB_Light.datasource" />
-    <None Include="Properties\DataSources\DMX512.DB_StepCount.datasource" />
-    <None Include="Properties\DataSources\DMX512.DB_StepCountPK.datasource" />
-    <None Include="Properties\DataSources\DMX512.DB_Value.datasource" />
-    <None Include="Properties\DataSources\DMX512.DB_ValuePK.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -934,6 +928,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MyForm\Test\" />
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.110.0\build\net40\System.Data.SQLite.Core.targets')" />
