--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Ast\Enum\EnumOperation.cs" />
     <Compile Include="Ast\Enum\EnumUnifyWhere.cs" />
     <Compile Include="Ast\LightsChange.cs" />
+    <Compile Include="Ast\StepWrapperCommon.cs" />
     <Compile Include="Ast\TongdaoWrapperCommon.cs" />
     <Compile Include="DAO\OldDAO.cs" />
     <Compile Include="Entity\DB_ChannelPK.cs" />
