#基本完成了更改灯具地址后，保留相应步数信息的功能（而且这个写法，基本上可以保证没太大的问题，思路很简单易懂）

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Ast\LightsChange.cs" />
     <Compile Include="Ast\StepWrapperCommon.cs" />
     <Compile Include="Ast\TongdaoWrapperCommon.cs" />
+    <Compile Include="Common\ListHelper.cs" />
     <Compile Include="DAO\OldDAO.cs" />
     <Compile Include="Entity\DB_ChannelPK.cs" />
     <Compile Include="Entity\DB_FineTune.cs" />
