-去掉一些全局变量：isInit,isCreateSuccess等；+基本完成把协议放到MainForm的功能，（ToolsForm中的选择不再生效）；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -2,7 +2,7 @@
 [Show]
 multiRun=false
 newMainForm=false
-useSkin=false
+useSkin=true
 testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
