++++添加预览模块单灯单步预览 ++++添加串口模式预览，包括场景预览以及单灯单步预览

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -452,6 +452,7 @@
     <Compile Include="Xiaosa\Preview\Channel.cs" />
     <Compile Include="Xiaosa\Preview\ChannelGroup.cs" />
     <Compile Include="Xiaosa\Preview\Player.cs" />
+    <Compile Include="Xiaosa\Preview\SeiralPortPlayer.cs" />
     <Compile Include="Xiaosa\Tools\CSJProjectBuilder.cs" />
     <Compile Include="Xiaosa\Tools\SerialPortDMXPlay.cs" />
     <EmbeddedResource Include="Entity\DB_Light.hbm.xml">
