--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -15,6 +15,8 @@
   <package id="NPOI" version="2.4.1" targetFramework="net40" />
   <package id="NUnit" version="2.7.0" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
+  <package id="SunnyUI" version="3.0.8" targetFramework="net40" />
+  <package id="SunnyUI.Common" version="3.0.8" targetFramework="net40" />
   <package id="System.Data.SQLite" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.EF6" version="1.0.110.0" targetFramework="net40" />
