--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -5,12 +5,13 @@
   <package id="Castle.DynamicProxy" version="2.1.0" targetFramework="net40" />
   <package id="cef.redist.x64" version="83.3.12" targetFramework="net40" />
   <package id="cef.redist.x86" version="83.3.12" targetFramework="net40" />
+  <package id="cskin" version="16.1.14.3" targetFramework="net40" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
   <package id="fastJSON" version="2.3.5.2" targetFramework="net40" />
   <package id="FTD2XX.Net" version="1.0.14" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net40" />
   <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
   <package id="NPOI" version="2.4.1" targetFramework="net40" />
   <package id="NUnit" version="2.7.0" targetFramework="net40" />
