--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -11,6 +11,7 @@
   <package id="FTD2XX.Net" version="1.0.14" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net40" />
   <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
   <package id="NPOI" version="2.4.1" targetFramework="net40" />
   <package id="NUnit" version="2.7.0" targetFramework="net40" />
