--- a/DimmerSystem/packages.config
+++ b/DimmerSystem/packages.config
@@ -5,6 +5,8 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net40" />
   <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
+  <package id="NPOI" version="2.4.1" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net40" />
   <package id="SunnyUI" version="3.0.8" targetFramework="net40" />
   <package id="SunnyUI.Common" version="3.0.8" targetFramework="net40" />
