--- a/DimmerSystem/DimmerSystem.csproj
+++ b/DimmerSystem/DimmerSystem.csproj
@@ -153,6 +153,12 @@
     <Compile Include="MyForm\Connect\DMX512ConnectForm.Designer.cs">
       <DependentUpon>DMX512ConnectForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Connect\ConnectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Connect\ConnectForm.Designer.cs">
+      <DependentUpon>ConnectForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\LightList\LightsAddForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -254,6 +260,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Resources\灯光图.png" />
+    <EmbeddedResource Include="MyForm\Connect\ConnectForm.resx">
+      <DependentUpon>ConnectForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Connect\DMX512ConnectForm.resx">
       <DependentUpon>DMX512ConnectForm.cs</DependentUpon>
     </EmbeddedResource>
