--- a/DimmerSystem/DimmerSystem.csproj
+++ b/DimmerSystem/DimmerSystem.csproj
@@ -168,6 +168,12 @@
     <Compile Include="MyForm\Device\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Device\SequencerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Device\SequencerForm.Designer.cs">
+      <DependentUpon>SequencerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\LightList\LightsAddForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -289,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Device\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Device\SequencerForm.resx">
+      <DependentUpon>SequencerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\LightList\LightsAddForm.resx">
       <DependentUpon>LightsAddForm.cs</DependentUpon>
